# linkedin-hybrid-mcp

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  configuration.md  roadmap.md  security.md
src/linkedin_hybrid_mcp/: __init__.py  __main__.py  auth.py  client.py  company_profile.py  config.py  domain.py  public_features.py  server.py
tests/: test_auth.py  test_client.py  test_company_profile.py  test_domain.py  test_public_features.py  test_server.py
