[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "linkedin-hybrid-mcp"
version = "0.1.0"
description = "API-first MCP service scaffold for LinkedIn workflows."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "happy-yololo" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
mcp = [
  "mcp>=1.6.0; python_version >= '3.10'",
]

[project.scripts]
linkedin-hybrid-mcp = "linkedin_hybrid_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/linkedin_hybrid_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
